# LearnCpp

./: .gitignore  .markdownlint.yaml  README.md
CppCon/CppCon_2017/: overview.md  references.md
CppCon/CppCon_2017/news/language_changes/initializers/demo/: CMakeLists.txt
CppCon/CppCon_2020/: overview.md  references.md
CppCon/CppCon_2020/language_changes/attributes/: main.cpp
CppCon/CppCon_2020/language_changes/class_enums_and_using_directive/: main.cpp
CppCon/CppCon_2020/language_changes/consteval/: CMakeLists.txt  main.cpp  run.sh
CppCon/CppCon_2020/language_changes/constexpr/: main.cpp
CppCon/CppCon_2020/language_changes/constinit/: CMakeLists.txt  main.cpp
CppCon/CppCon_2020/language_changes/coroutines/: news.md
CppCon/CppCon_2020/language_changes/coroutines/demo/: CMakeLists.txt  main.cpp  run.sh
CppCon/CppCon_2020/language_changes/designated_initializers/: main.cpp
CppCon/CppCon_2020/language_changes/feature_testing_macros/: main.hpp
CppCon/CppCon_2020/language_changes/lambda_explict_this_capture/: .clangd  main.cpp
CppCon/CppCon_2020/language_changes/modules/: news.md
CppCon/CppCon_2020/language_changes/modules/demo/: CMakeLists.txt  cppcon.cppm  cppcon.pcm  info.sh  main.cpp  run.sh
CppCon/CppCon_2020/language_changes/non-type_template_parameters/: CMakeLists.txt  main.cpp
CppCon/CppCon_2020/language_changes/pack_expansion_in_lambda_cpatures/: main.cpp
CppCon/CppCon_2020/language_changes/range-based_for_loop_initializers/: main.cpp
CppCon/CppCon_2020/language_changes/spaceship_operator/: main.cpp  main2.cpp  run.sh
CppCon/CppCon_2020/language_changes/templated_lambda_expressions/: main.cpp
CppCon/CppCon_2020/library_changes/atomic_smart_pointers/: main.cpp  main2.cpp
CppCon/CppCon_2020/library_changes/bit/: CMakeLists.txt  main.cpp
CppCon/CppCon_2020/library_changes/chrono_calendars_and_timezones/: main.cpp
CppCon/CppCon_2020/library_changes/format/: main.cpp
CppCon/CppCon_2020/library_changes/jthread/: main.cpp
CppCon/CppCon_2020/library_changes/numbers/: main.cpp
CppCon/CppCon_2020/library_changes/source_location/: main.cpp
CppCon/CppCon_2020/library_changes/span/: main.cpp
CppCon/CppCon_2020/library_changes/string_small_additions/: main.cpp  run.sh
CppCon/CppCon_2020/library_changes/synchronization_library/: main.cpp
CppCon/CppCon_2020/library_changes/version/: run.sh
CppCon/CppCon_2021/: references.md
CppCon/CppCon_2021/Back-to-Basics-Lambdas/01-intro-lambdas/: .clangd  CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  run.sh
CppCon/CppCon_2021/Back-to-Basics-Lambdas/02-lambdas-as-better-functions/: .clangd  CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  run.sh
CppCon/CppCon_2021/Back-to-Basics-Lambdas/03-lambdas-are-function-objects/: .clangd  CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  run.sh
CppCon/CppCon_2021/Back-to-Basics-Lambdas/04-capturing-in-detail/: .clangd  CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  run.sh
CppCon/CppCon_2021/Back-to-Basics-Move-Semantics/: overview.md
CppCon/CppCon_2021/Back-to-Basics-Move-Semantics/01-move-semantics-example/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp
CppCon/CppCon_2021/Back-to-Basics-Move-Semantics/02-move-semantics-explained/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
CppCon/CppCon_2021/Back-to-Basics-Move-Semantics/03-move-semantics-for-classes/: .clangd  main.cpp  main2.cpp  main3.cpp  main4.cpp
CppCon/CppCon_2021/Back-to-Basics-Move-Semantics/04-perfect-forwarding/: .clangd  CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  run.sh
CppCon/CppCon_2022/: references.md
CppCon/CppCon_2022/Back-to-Basics-API-Design/: overview.md
CppCon/CppCon_2022/Back-to-Basics-API-Design/01-nodiscard/: main.cpp  main2.cpp  main3.cpp  main4.cpp  run.sh
CppCon/CppCon_2022/Back-to-Basics-API-Design/02-noexcept/: main.cpp
CppCon/CppCon_2022/Back-to-Basics-API-Design/03-factory-function/: main.cpp  main2.cpp  main3.cpp
CppCon/CppCon_2022/Back-to-Basics-Smart-Pointers/: overview.md
CppCon/CppCon_2022/Back-to-Basics-Smart-Pointers/01-intro/: .clangd  CMakeLists.txt  main.cpp  run.sh
CppCon/CppCon_2022/Back-to-Basics-Templates/: overview.md
CppCon/CppCon_2022/Back-to-Basics-Value-Semantics/: overview.md
CppCon/CppCon_2022/Using-Modern-Cpp-to-Eliminate-Virtual-Functions/: overview.md
CppCon/CppCon_2022/Using-Modern-Cpp-to-Eliminate-Virtual-Functions/02-owing-a-polymorphic-type/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
CppCon/CppCon_2023/: overview.md  references.md
CppCon/CppCon_2023/Back-to-Basics-Concurrency/: overview.md
CppCon/CppCon_2023/Back-to-Basics-Forwarding-References/: overview.md
CppCon/CppCon_2023/Back-to-Basics-Initialization/: overview.md
CppCon/CppCon_2023/Back-to-Basics-Iterators/: overview.md
CppCon/CppCon_2023/Back-to-Basics-Range-Algorithms/01-ranges/: CMakeLists.txt  main.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cpp  main14.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp  run.sh
CppCon/CppCon_2023/library_changes/modules/demo/: CMakeLists.txt  main.cpp  run.sh
CppCon/CppCon_2024/: overview.md
CppCon/CppCon_2024/Back-to-Basics-Concepts/: overview.md
CppCon/CppCon_2024/Back-to-Basics-Generic-Programming/: overview.md
CppCon/CppCon_2024/Back-to-Basics-Lifetime-Management/: overview.md
CppKeyWord/auto/: REFERENCES.md
CppKeyWord/static/: REFERENCES.md
CppTools/BuildSystem/meson/examples/hello/: .clang-format  main.c  meson.build  run.sh
CppTools/BuildSystem/meson/examples/hello2/: meson.build  run.sh
CppTools/BuildSystem/meson/examples/hello2/src/: hello.c  meson.build
_template/common/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
_tools/: REFERENCES.md  references.md
template/common/: .clang-format  .clangd  CMakeLists.txt
template/misc/: .editorconfig  .markdownlint-cli2.yaml  .markdownlint.yaml  .neocmakelint.toml
tools/: REFERENCES.md
(+373 files in other folders)
